{
    "name": "PlayerMobileInputAction",
    "maps": [
        {
            "name": "Touch",
            "id": "393d904e-1694-4ca8-a838-b844aa043255",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "57b956b7-1043-4921-b99d-0b393b1bf6b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "e5b86608-9e6e-45cb-b9d3-ac69f85ef226",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "70a2ea98-3a87-4faf-8c43-b1344d4a7173",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb328e7f-fb3f-4def-98e6-64196cfd7b1c",
                    "path": "<Touchscreen>/primaryTouch/indirectTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc53d1ff-ad65-4e18-bf1f-bd1fe93674a6",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa0d9d36-e5cf-4427-a31b-b9cbe8f318d7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}